--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en" style="scroll-behavior: smooth;">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="Claire_Yau_logo-removebg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Professional portfolio of Claire Yau"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="Claire_Yau_logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Claire Yau</title>
   </head>
